fix button spacing

--- a/resources/sass/_units.scss
+++ b/resources/sass/_units.scss
@@ -68,7 +68,7 @@
     }
 }
 .guild-list {
-    .row:first-of-type {
+    .row {
         > * {
             flex-grow: 0;
 
